[package]
name = "assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = "2.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "1.18"
solana-sdk = "1.18"
spl-associated-token-account = "2.3"
spl-token = "4.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
