[package]
name = "assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.88"  
axum = "0.7.7"     
base64 = "0.22.1"  
bs58 = "0.5.1"     
ed25519-dalek = "1.0.1"  
rand = "0.8.5"     
serde = { version = "1.0.219", features = ["derive"] }  
serde_json = "1.0.140"  
solana-client = "1.18.1"  
solana-sdk = "1.18.1"    
spl-associated-token-account = "2.3.0"  
spl-token = "4.0.1"      
tokio = { version = "1.45.2", features = ["full"] } 
tower = "0.4.13"   
tower-http = { version = "0.6.7", features = ["cors"] }  
tracing = "0.1.40"  
tracing-subscriber = "0.3.18"  